# amplify-app

./: .gitignore  Makefile  README.md  package-lock.json  package.json  render.yaml
backend/: .env.example  database.py  main.py  prompt_factory.py  pyproject.toml  schemas.py
backend/routers/: auth.py  battle.py  persona.py
backend/services/: claude_client.py  llm_manager.py
src/: App.css  App.js  index.css
src/components/: ProtectedRoute.js
src/pages/: BattlePage.css  BattlePage.js  LoginPage.css  LoginPage.js  MetsuPage.css  MetsuPage.js  PersonaRefinePage.css  PersonaRefinePage.js  SetupPage.css  SetupPage.js
