[project]
name = "boss-boko-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "anthropic==0.52.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
]
